2009-10-29  Michael Banck  <mbanck@gmx.net>

	* src/formats/outformat.cpp: Applied patch #2888693 to add support for
	PC-GAMESS/Firefly.  Addresses PR#2884618.

2009-10-25  Noel O'Boyle  <baoilleach@gmail.com>

	* builder.h, .cpp: Add code to fix ring stereochemistry if possible 
	by inverting the coordinates of a ring system.

2009-10-25  Chris Morley

	* include/openbabel/src/alias.cpp: Add warning that the current implementation
	does not add atom coordinates when it expands a superatom.
		
2009-10-24  Chris Morley

	* include/openbabel/alias.h, src/alias.cpp: To convert an alias name
	(like Ph) to real chemistry, look up in a table, convert the SMILES
	of the fragment and add it in. No coordinate generation yet.
	
	* data/superatom.txt: the datafile from http://cactus.nci.nih.gov/osra/
	It could do with more entries, which are easy to add.
	
	* src/formats/mdlformat.cpp: Reinstate the code reading  aliases which
	seems to have got mangled during a merge. Example in test/files/alias.mol

2009-10-24  Noel O'Boyle  <baoilleach@gmail.com>

	* src/parsmart.cpp, include/openbabel/parsmart.h: Make
	bond_parse_order an instance variable rather than a class variable.
	Fixes bug where multiple SMARTS patterns are parsed before being used
	to Match.

2009-10-08  Noel O'Boyle  <baoilleach@gmail.com>

	* src/builder.cpp: Don't attempt to fix stereochemistry if unspecified.
2009-10-19  Chris Morley

	* src/alias.cpp: Correct small memory leak as suggested by dcb #2881605

2009-10-06  Noel O'Boyle  <baoilleach@gmail.com>

	* src/forcefield.cpp: Correctly handle SteepestDescent and Conjugate
	Gradients where nsteps is 0 or 1

2009-10-05  Noel O'Boyle  <baoilleach@gmail.com>

	* src/forcefield.cpp: In ff.GetConformers(mol) if only a single
	conformer was generated it was not being copied.

2009-10-04  Noel O'Boyle  <baoilleach@gmail.com>

	* For Windows build, enable tests to be run in either Debug or Release